--- a/.github/workflows/docker-image.yml
+++ b/.github/workflows/docker-image.yml
@@ -23,8 +23,8 @@ jobs:
     - name: Login to Docker Hub
       uses: docker/login-action@v1
       with:
-        username: ${{ secrets.DOCKERHUB_USERNAME }}
+        username: fjzhangzzz
         password: ${{ secrets.DOCKERHUB_TOKEN }}
 
     - name: Push to Docker Hub
-      run: docker push toolchain:latest
+      run: docker push fjzhangzzz/toolchain:latest
