--- a/.github/workflows/docker-image.yml
+++ b/.github/workflows/docker-image.yml
@@ -18,7 +18,9 @@ jobs:
       uses: actions/checkout@v3
 
     - name: Build the Docker image
-      run: bash generate.sh
+      run: |
+        bash generate.sh
+        docker images
 
     - name: Login to Docker Hub
       uses: docker/login-action@v1
