--- a/.github/workflows/docker-image.yml
+++ b/.github/workflows/docker-image.yml
@@ -17,16 +17,14 @@ jobs:
     - name: Check out the repo
       uses: actions/checkout@v3
 
-    - name: Build the Docker image
-      run: |
-        bash generate.sh
-        docker images
-
     - name: Login to Docker Hub
       uses: docker/login-action@v1
       with:
         username: fjzhangzzz
         password: ${{ secrets.DOCKERHUB_TOKEN }}
 
-    - name: Push to Docker Hub
-      run: docker push fjzhangzzz/toolchain:latest
+    - name: Build and Push the Docker image
+      run: |
+        bash generate.sh
+        docker images
+        docker push fjzhangzzz/toolchain:latest
