--- a/.github/workflows/docker-image-linux-aarch64.yaml
+++ b/.github/workflows/docker-image-linux-aarch64.yaml
@@ -30,5 +30,5 @@ jobs:
         docker run --rm --privileged multiarch/qemu-user-static --reset -p yes
         cd linux-aarch64 && docker build -t ${IMAGE_NAME}:linux-aarch64 .
         docker images
-        docker tag ${{ env.IMAGE_NAME }}:latest ${{ env.DOCKERHUB_USERNAME }}/${{ env.IMAGE_NAME }}:linux-aarch64
+        docker tag ${{ env.IMAGE_NAME }}:linux-aarch64 ${{ env.DOCKERHUB_USERNAME }}/${{ env.IMAGE_NAME }}:linux-aarch64
         docker push ${{ env.DOCKERHUB_USERNAME }}/${{ env.IMAGE_NAME }}:linux-aarch64
